# fibonacci

./: .gitattributes  .gitignore  Cargo.toml  README.md  hyperveritas.sh  vimz.sh
circ-video-editing/: Cargo.toml  P  P_long  README.md  SpartanPP  V  ark_trace_collapse  pi
circ-video-editing/circ_fields/: Cargo.toml
circ-video-editing/circ_fields/src/: int_field.rs  lib.rs
circ-video-editing/circ_fields/src/t256/: mod.rs
circ-video-editing/circ_hc/src/collections/: lru.rs
circ-video-editing/circ_hc/src/rc/: example_u8.rs  macro_.rs  template.rs
circ-video-editing/circ_opt/: README.md
circ-video-editing/circ_opt/src/: lib.rs
circ-video-editing/examples/: circ.rs  compute_lookup_table.rs  ecdsa_ring.rs  ecdsa_sigma.rs  opa_bench.rs  run_zk.rs  zk.rs  zk_preprocessor.rs
circ-video-editing/scripts/: ecdsa_ring.sh
circ-video-editing/scripts/python/bench/: parse_ring.py
circ-video-editing/src/: allocate.rs  convert.rs  lib.rs  math.rs  parse_cert.rs  parse_zokrates.rs  preproc_utils.rs  user_input.rs  zkconst.rs
circ-video-editing/src/alignment/: mod.rs
circ-video-editing/src/bignat/: bignat.rs  bignat_adv.rs  bignatwithlimbmax.rs  mod.rs
circ-video-editing/src/circify/: mod.rs
circ-video-editing/src/commitment/: commitment.rs  compute_poly.rs  elgamal.rs  gk_mem.rs  mod.rs  pedersen.rs  poseidon_const.rs  transcript.rs
circ-video-editing/src/create_input/: create_input.rs  mod.rs  prover_input.rs  verifier_input.rs
circ-video-editing/src/ecdsa/: convert.rs  ecdsa.rs  ecdsa_adv.rs  group.rs  mod.rs  prover_input.rs  pure_sigma.rs  random.rs  right_field.rs  ring.rs  sigma.rs  transcript.rs  verifier_input.rs
circ-video-editing/src/eddsa/: edwards25519.rs  hash.rs  mod.rs  sigma.rs  signature.rs  verifying.rs
circ-video-editing/src/front/: mod.rs
circ-video-editing/src/front/c/: term.rs
circ-video-editing/src/front/zsharp/: interp.rs  mod.rs  term.rs
circ-video-editing/src/hash/: hash.rs  mod.rs  sha256.rs
circ-video-editing/src/ir/opt/: cfold.rs  chall.rs  expand_linear.rs  mod.rs  scalarize_vars.rs  tuple.rs  visit.rs
circ-video-editing/src/ir/term/: dist.rs  fmt.rs  map.rs  mod.rs  precomp.rs  ty.rs
circ-video-editing/src/right_field_arithmetic/: alloc.rs  convert.rs  field.rs  mod.rs
circ-video-editing/src/rsa/: exp.rs  mod.rs  prover_input.rs  rsa.rs  rsa_adv.rs  verifier_input.rs
circ-video-editing/src/util/: mod.rs  print.rs  timer.rs  trace.rs
circ-video-editing/zok_src/ecdsa/: convert.zok  group_operation.zok  verify_ec_operations.zok  verifyecdsa_dynamic_stride.zok
circ-video-editing/zok_src/ecdsa/Fp/: group_operation.zok  verifyecdsa_naive.zok
circ-video-editing/zok_src/ecdsa/Fp-estimate/: group_operation.zok
circ-video-editing/zok_src/ecdsa/advanced/: group_operation.zok  group_operation_incomplete.zok  verifyecdsa.zok
circ-video-editing/zok_src/ecdsa/const/: basepower_32_5.zok  basepower_32_6.zok  basepower_32_7.zok  basepower_32_8.zok  basepower_32_9.zok  basepower_64_5.zok  basepower_64_6.zok  basepower_64_7.zok  basepower_64_8.zok  basepower_64_9.zok  basepower_window_32_10.zok  basepower_window_32_11.zok  basepower_window_32_8.zok  basepower_window_32_9.zok  basepower_window_64_10.zok  basepower_window_64_8.zok  basepower_window_64_9.zok
circ-video-editing/zok_src/ecdsa/sigma/: group_operation.zok  verifyecdsa.zok
circ-video-editing/zok_src/ecdsa/struct/: ecdsa_advstruct.zok  ecdsa_sigmastruct.zok  ecdsaconst_advstruct.zok  ecdsaconststruct.zok  ecdsastruct.zok
circ-video-editing/zok_src/ed25519/right_field/: ed25519.py  generate_input.py  test_verify_2048.zok.pin  test_verify_512.zok.pin  test_verify_64.zok.pin  test_verify_64.zok.vin  verify.zok  verify1.zok
circ-video-editing/zok_src/experiment/mem_scaling/: gpows_scan.zok  gpows_transcript.zok  run_experiments.zsh
circ-video-editing/zok_src/hash/: convert.zok
circ-video-editing/zok_src/hash/sha256/: basic_op.zok  logic_func.zok  padding.zok  sha256_padded.zok  utils.zok
circ-video-editing/zok_src/rsa/: const_for_mod.zok  rsastruct.zok
circ-video-editing/zok_src/video/: freivalds_editing.zok  naive_lc_blurring.zok
circ-video-editing/zok_src/zok_utils/: assert_well_formed.zok  is_equal.zok  mod_arithmetic_adv.zok  mod_arithmetic_adv_naive.zok  modulomultiply.zok  modulomultiply_v3.zok  range_check.zok  range_check_naive.zok  scalar_mult.zok
inner-product-precompile/script/: Cargo.toml
inner-product-precompile/script/src/: main.rs
inner-product-proof/script/: Cargo.toml
inner-product-proof/script/src/: main.rs
video-blurring-freivalds/script/: Cargo.toml  config.json
video-resizing-freivalds/: .gitignore  Cargo.toml
video-resizing-freivalds-precompile/init/: Cargo.toml  config.json
video-resizing-freivalds-precompile/program/: Cargo.toml
video-resizing-freivalds-precompile/program-precompile/: Cargo.toml
video-resizing-freivalds-precompile/program-precompile/src/: main.rs
video-resizing-freivalds-precompile/program/src/: main.rs
video-resizing-freivalds-precompile/script/: Cargo.toml
video-resizing-freivalds/aggregate_script/: config.json
video-resizing-freivalds/aggregate_verifier/: config.json
video-resizing-freivalds/aggregate_verifier/src/: main.rs
video-resizing-freivalds/init/: config.json
video-resizing-freivalds/init/src/: main.rs
video-resizing-freivalds/lib/: Cargo.toml
video-resizing-freivalds/lib/src/: freivalds_gblur.rs  freivalds_resize.rs  gblur.rs  lib.rs  resize.rs
video-resizing-freivalds/program/: Cargo.toml
video-resizing-freivalds/program-precompile/: Cargo.toml
video-resizing-freivalds/program-precompile/src/: main.rs
video-resizing-freivalds/program/src/: main.rs
video-resizing-freivalds/script/: Cargo.toml  build.rs  config.json  differences.txt  target_middle_image.txt
video-resizing-freivalds/verifier/: cargo.toml  config.json
video-resizing-freivalds/verifier/src/: main.rs
video-signature-verification/: Cargo.toml  README.md  run_benchmarks.sh
video-trimming/: Cargo.toml  README.md  Video signing stuff.ipynb  run_benchmarks.sh
video-trimming/src/: lib.rs
(+275 files in other folders)
