[package]
name = "circ"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dorian-t256 = { git = "https://github.com/woopuiyung/Dorian.git", branch = "t256", optional = true, features = ["profile", "multicore", "bench"]}
dorian = { path = "third_party/Dorian", default-features = false, optional = true, features = ["profile", "std", "multicore", "bench"] } # , "simd_backend"
dorian-t25519 = { git = "https://github.com/woopuiyung/Dorian.git", branch = "t25519", optional = true, features = ["profile", "multicore", "bench"]}
subtle = "2.4"
hex = "0.4.3"
hex-literal = "0.4"
ed25519-dalek = {version="2.1.1", features=["rand_core", "serde"]}
sha2 = { version = "0.10", default-features = false } # needed to implement hash to curve in spartan
ark-ff = { version = "0.4.2", default-features = false } # needed by spartan
ark-ec = { version = "0.4.2", default-features = false} # needed by t256
ark-secp256r1 = { version = "0.4.0", default-features = false} # needed by gk membership proof
ark-std = { version = "0.4.0", default-features = false } # needed by gk membership proof
ark-serialize = {version = "0.4.2", default-features = false } # needed by t256
openssl = "0.10"
p256 = "0.13.2"  # Check for the latest version
elliptic-curve = { version = "=0.13.6", default-features = false, features = ["hazmat", "sec1"] }
rand_core = "0.6"  # Check for the latest version
rand_core0_5 = {package = "rand_core", version="0.5"}
regex = "1.4"
rsa = "0.9.2"
pem = "2.0.1"
dynfmt = {version = "0.1", features = ["curly"]}
circ_fields = { path = "circ_fields" }
circ_opt = { path = "circ_opt" }
circ_hc = { path = "circ_hc", default-features = false, features = ["rc", "lru"]}
circ_waksman = { path = "circ_waksman" }
rug = { version = "1.18", features = ["serde"] }
gmp-mpfr-sys = { version = "1.4", optional = true }
lazy_static = { version = "1.4", optional = true }
rand = "0.8"
rand_chacha = "0.3"
rsmt2 = { version = "0.14", optional = true }
ieee754 = { version = "0.2", optional = true}
zokrates_parser = { path = "third_party/ZoKrates/zokrates_parser", optional = true }
zokrates_pest_ast = { path = "third_party/ZoKrates/zokrates_pest_ast", optional = true }
typed-arena = { version = "2.0", optional = true }
log = "0.4"
thiserror = "1.0"
bellman = { git = "https://github.com/alex-ozdemir/bellman.git", branch = "mirage", optional = true }
rug-polynomial = { version = "0.2.5", optional = true }
rayon = { version = "1", optional = true }
ff = { version = "0.12", optional = true }
fxhash = "0.2"
good_lp = { version = "1.1", features = ["lp-solvers", "coin_cbc"], default-features = false, optional = true }
group = { version = "0.12", optional = true }
lp-solvers = { version = "0.0.4", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = { version = "0.11", optional = true }
bincode = { version = "1.3.3", optional = true }
byteorder = { version = "1", optional = true }
lang-c = { version = "0.10.1", optional = true }
logos = "0.12"
pairing = { version = "0.22", optional = true }
pest = { version = "2.4", optional = true }
pest_derive = { version = "2.1", optional = true }
pest-ast = { version = "0.3", optional = true }
from-pest = { version = "0.3", optional = true }
itertools = "0.10"
petgraph = { version = "0.6", optional = true }
merlin = { version = "3.0.0"}
curve25519-dalek = {version = "4.0", features = ["serde", "rand_core"]}

# TODO: kill
paste = "1.0"
im = "15"
once_cell = "1"
jemallocator = "0.5"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
env_logger = "0.8"
bls12_381 = {git = "https://github.com/woopuiyung/bls12_381.git", branch = "release-0.7.0"}
approx = "0.5.0"

[features]
default = ["bellman", "r1cs", "poly", "smt", "zok", "datalog", "multicore", "spartan"]
# frontends
c = ["lang-c"]
zok = ["smt", "zokrates_parser", "zokrates_pest_ast", "typed-arena", "petgraph"]
datalog = ["pest", "pest-ast", "pest_derive", "from-pest", "lazy_static"]
# backends
smt = ["rsmt2", "ieee754"]
lp = ["good_lp", "lp-solvers"]
aby = ["lp"]
r1cs = ["bincode", "rayon"]
poly = ["rug-polynomial"]
spartan = ["r1cs", "dep:dorian", "dep:dorian-t256", "dep:dorian-t25519", "bincode", "gmp-mpfr-sys"]
# spartan = ["r1cs", "dep:spartan", "bincode", "gmp-mpfr-sys"]
bellman = ["r1cs", "dep:bellman", "ff", "group", "pairing", "serde_bytes", "bincode", "gmp-mpfr-sys", "byteorder", "rayon"]
multicore = ["rayon"]

[[example]]
name = "circ"

[[example]]
name = "zk"
required-features = ["r1cs"]

[[example]]
name = "cp"
required-features = ["bellman", "poly"]

[[example]]
name = "zxi"
required-features = ["smt", "zok"]

[[example]]
name = "zxc"
required-features = ["smt", "zok"]

[[example]]
name = "opa_bench"
required-features = ["lp", "aby"]

[profile.release]
debug = true

[workspace]
