[package]
name = "video-signature-verification"
version.workspace = true
edition.workspace = true

[dependencies]
ark-cp-groth16 = { git = "https://github.com/Pratyush/hekaton-system/", subdirectory = "cp-groth16" }
ark-r1cs-std = { version = "0.4" }
ark-relations = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
jemallocator = { version = "0.5" }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false } 
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
rayon = { version = "1.5.1", default-features = false, optional = true }
sha2 = "0.10.8"


[features]
default = ["std"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-serialize/std", "ark-bls12-381/std"  ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-serialize/std", "rayon"]
asm = ["ark-ff/asm"]
print-trace = [ "ark-std/print-trace" ]
