[package]
name = "video-trimming"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
rand = "0.9.1"
bytemuck = "1.21.0"
blstrs = "0.7.1"
neptune = "13.0.0"
pasta_curves = "0.5.1"
typenum = "1.18.0"
rayon = "1.10.0"
rs_merkle = "1.5.0"
sha2 = "0.10.8"
sha256 = "1.5.0"
ark-std = "0.5"
itertools = "0.14"
p3-baby-bear = "0.2.0-succinct"
p3-challenger = "0.2.0-succinct"
p3-goldilocks = "0.2.0-succinct"
p3-circle = "0.2.0-succinct"
p3-commit = "0.2.0-succinct"
p3-dft = "0.2.0-succinct"
p3-field = "0.2.0-succinct"
p3-fri = "0.2.0-succinct"
p3-keccak = "0.2.0-succinct"
p3-matrix = "0.2.0-succinct"
p3-maybe-rayon = "0.2.0-succinct"
p3-merkle-tree = "0.2.0-succinct"
p3-mersenne-31 = "0.2.0-succinct"
p3-poseidon2 = "0.2.0-succinct"
p3-symmetric = "0.2.0-succinct"
p3-util = "0.2.0-succinct"
rand_chacha = "0.9.0"
# rand_core = "0.9.0"
p3-field-git = { git = "https://github.com/scroll-tech/plonky3", rev = "8d2be81", package = "p3-field" }
mpcs = { git = "https://github.com/scroll-tech/ceno", subdirectory = "mpcs" }
transcript = { git = "https://github.com/scroll-tech/ceno", subdirectory = "transcript" }
ff_ext = { git = "https://github.com/scroll-tech/ceno", subdirectory = "ff_ext" }
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno", subdirectory = "multilinear_extensions" }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.5.0", default-features = false }
ark-pcs-bench-templates = { git = "https://github.com/arkworks-rs/poly-commit", subdirectory = "bench-templates" }
ark-ff = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
# rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.10", default-features = false }
ark-poly-commit = "0.5.0"
ed25519-dalek = "2.1.1"
