[package]
name = "video-trimming"
version = "1.1.0"
edition = "2021"

[workspace]

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
rand = "0.8.5"
bytemuck = "1.21.0"
blstrs = "0.7.1"
neptune = "13.0.0"
pasta_curves = "0.5.1"
typenum = "1.18.0"
rayon = "1.10.0"
rs_merkle = "1.5.0"
sha2 = "0.10.8"
sha256 = "1.5.0"
ark-std = "0.5"
itertools = "0.13"
p3-baby-bear = "0.2.0"
p3-challenger = "0.2.0"
p3-goldilocks = "0.2.0"
p3-circle = "0.2.0"
p3-commit = "0.2.0"
p3-dft = "0.2.0"
p3-field = "0.2.0"
p3-fri = "0.2.0"
p3-keccak = "0.2.0"
p3-matrix = "0.2.0"
p3-maybe-rayon = "0.2.0"
p3-merkle-tree = "0.2.0"
p3-mersenne-31 = "0.2.0"
p3-poseidon2 = "0.2.0"
p3-symmetric = "0.2.0"
p3-util = "0.2.0"
rand_chacha = "0.3.1"
# rand_core = "0.9.0"
p3-field-git = { git = "https://github.com/scroll-tech/plonky3", rev = "20c3cb9", package = "p3-field" }
p3-goldilocks-git = { git = "https://github.com/scroll-tech/plonky3", rev = "20c3cb9", package = "p3-goldilocks" }
p3-matrix-git = { git = "https://github.com/scroll-tech/plonky3", rev = "20c3cb9", package = "p3-matrix" }
mpcs = { git = "https://github.com/scroll-tech/ceno", rev = "82b5b04", subdirectory = "mpcs" }
transcript = { git = "https://github.com/scroll-tech/ceno", rev = "82b5b04", subdirectory = "transcript" }
ff_ext = { git = "https://github.com/scroll-tech/ceno", rev = "82b5b04", subdirectory = "ff_ext" }
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno", rev = "82b5b04", subdirectory = "multilinear_extensions" }
witness = { git = "https://github.com/scroll-tech/ceno", rev = "82b5b04", subdirectory = "witness" }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.5.0", default-features = false }
ark-pcs-bench-templates = { git = "https://github.com/arkworks-rs/poly-commit", subdirectory = "bench-templates" }
ark-ff = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
# rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.10", default-features = false }
ark-poly-commit = "0.5.0"
ed25519-dalek = "2.1.1"
