[package]
name = "circ_fields"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2021"

[dependencies]
# serde_bytes = { version = "0.11.14", default-features = false }
sha2 = "0.10.8" # needed to implement hash to curve in spartan
ff = { version = "0.12", features = ["derive"] }
ff_derive = "0.12"
ff-derive-num = "0.2"
lazy_static = "1.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
rug = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
datasize = { version = "0.2", features = ["detailed"] }
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false}
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
ark-std = { version = "0.4.0", default-features = false }
ark-secp256r1 = {default-features = false, git = "https://github.com/arkworks-rs/curves" }
ark-ff-macros =  { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }

[dev-dependencies]
rand = "0.8"
