[package]
name = "inner-product-script"
version = { workspace = true }
edition = { workspace = true }
default-run = "inner-product-script"
publish = false

[build-dependencies]
sp1-build = "4.1.1"

[[bin]]
name = "inner-product-script"
path = "src/main.rs"

[dependencies]
sp1-sdk = "4.1.1"
rand = "0.9.0"
