#![allow(warnings)]
[package]
version = "0.1.0"
name = "script"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "plonk_bn254"
path = "bin/plonk_bn254.rs"

[[bin]]
name = "groth16_bn254"
path = "bin/groth16_bn254.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"

[[bin]]
name = "execute"
path = "bin/execute.rs"

[[bin]]
name = "network"
path = "bin/network.rs"

[dependencies]
sp1-sdk = { version = "4.0.1", features = ["native-gnark"] }
serde_json = { version = "1.0.128", default-features = false, features = ["alloc"] }
serde = { version = "1.0.210", default-features = false, features = ["derive", "alloc"]}
clap = { version = "4.5.17", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
rand = "0.8"
alloy-sol-types = { workspace = true }
lib = { path = "../lib" }
sp1-derive = "4.0.1"
serde_cbor = "0.11.2"
sp1-build = "4.0.1"
blake3 = { version = "1.3.1", features = ["serde"] }

[build-dependencies]
sp1-helper = "4.0.1"
sp1-build = "4.0.1"