[package]
version = "0.1.0"
name = "freivalds-precompile"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
lib = { path = "../lib" }
blake3 = { version = "1.3.1", features = ["serde"] }
sp1-zkvm = { path = "./../../../sp1/crates/zkvm/entrypoint" }
sp1-derive = { path = "./../../../sp1/crates/derive" }