[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { path = "./../../../sp1/crates/zkvm/entrypoint" }
lib = { path = "../lib" }
sp1-derive = { path = "./../../../sp1/crates/derive" }
blake3 = { version = "1.3.1", features = ["serde"] }